--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </li>
 
         <li>
-          <a href=" https://wa.me/551989380250" target="_blank">Entre em contato</a>
+          <a href=" https://wa.me/551989380250" target="_blank">Entrar em contato</a>
         </li>
 
       </ul>
